portfolio.css
html{
  background-color: #4c546b;
  font-family: 'Montserrat', 'Helvetica';
}

body{
  font-family: 'Montserrat', 'Helvetica';
  text-align: center;
}

.button{
  font-size: 14px;
  background-color: transparent;
  color: #2b2a2a;
  border:none;
  border-bottom: solid 1px;
  transition-timing-function: ease-in-out;
  -webkit-transition: all 1s;
}

.button:hover, .active{
  color: black;
  transition-timing-function: ease-in-out;
  -webkit-transition: all 1s;
  margin: 0 40px 0 40px;
  font-size: 16px;
  font-weight: bold;
}

.active{
  background-color: transparent;
  border: none;
  /* font-style: bold; */
}

div.wrapper{
  margin-top: 5%;
}
div.portfolioProject{
  max-width:80vw;
  min-width: 200px
  margin:auto;

}
.wrapper{
    float:left;
}

.projects{
  position: relative;
}

.projectPreview{
  /* position: absolute; */
  z-index: -1;
  filter: sepia(20%) grayscale(100%) contrast(60%) brightness(110%);
  object-fit: cover;
  width: 200px;
  height: 200px;
  margin: auto;
  /* float: left; */
  -webkit-transition: all 1s;
  -webkit-transition: object-position .4s;
}

.projectPreview:hover{
  /* display: inline-block; */
  z-index: 1;
  transform: scale(1.2);
  -webkit-filter: none;
  -webkit-transition: all 1s;
  transition-timing-function: linear;
  object-position: 100%;
  transition: object-position 3s;
}

